--- a/4_HTML DOM/10_html_dom_插入节点.html
+++ b/4_HTML DOM/10_html_dom_插入节点.html
@@ -5,6 +5,111 @@
     <title>Title</title>
 </head>
 <body>
+<h3>html 插入节点</h3>
+<h4 style="white-space: pre-wrap; border: black 1px solid;width: 500px;">
+    appendChild            追加节点
+    <hr/>
+    insertBefore            在前方插入节点
+    <hr/>
+</h4>
 
+
+
+
+<br/>
+<hr/>
+<div style="background-color: lightgray;  border: 1px black solid;">
+    <h3>示例 1 : 追加节点</h3>
+    通过appendChild追加节点。 追加节点一定是把新的节点插在最后面<br/>
+    <h5 style="white-space: pre-wrap;">如本例：:
+        1. 创建新节点
+        2. 获取父节点
+        3. 通过appendChild追加
+    </h5>
+    <hr/>
+    <br/>
+    <div id="parentDiv">
+        <div id="d1">第一个div</div>
+        <div id="d2">第二个div</div>
+        <div id="d3">第三个div</div>
+    </div>
+    <button onclick="appendDiv()">追加第4个div</button>
+
+    <script>
+        function appendDiv(){
+            var d4=  document.createElement("div");
+            var text = document.createTextNode("第四个div");
+            d4.appendChild(text);
+
+            var parentDiv = document.getElementById("parentDiv");
+
+            parentDiv.appendChild(d4);
+        }
+
+    </script>
+</div>
+<hr/>
+<br/>
+
+
+<br/>
+<hr/>
+<div style="background-color: lightgray;  border: 1px black solid;">
+    <h3>示例 2 : 在前方插入节点</h3>
+    有时候，需要在指定位置插入节点，而不是只是追加在后面。<br/>
+    <h5 style="white-space: pre-wrap;">这个时候就需要用到insertBefore
+        1. 创建新节点
+        2. 获取父节点
+        3. 获取需要加入的子节点
+        4. 通过insertBefore插入
+    </h5>
+    注: insertBefore的第一个参数是新元素，第二个参数是插入位置
+    <hr/>
+    <br/>
+    <div id="parentDiv1">
+        <div id="d11">第一个div</div>
+        <div id="d21">第二个div</div>
+        <div id="d31">第三个div</div>
+    </div>
+    <button onclick="insertDiv()">在第二和第三之间，插入第二点五个div</button>
+
+    <script>
+        function insertDiv(){
+            var d25=  document.createElement("div");
+            var text = document.createTextNode("第二点五个div");
+            d25.appendChild(text);
+
+
+            var parentDiv = document.getElementById("parentDiv1");
+            var d31 = document.getElementById("d31");
+
+            parentDiv.insertBefore(d25, d31);
+
+        }
+
+    </script>
+</div>
+<hr/>
+<br/>
+
+
+<br/>
+<hr/>
+<div style="background-color: lightgray;  border: 1px black solid;" id="t3">
+    <h3>示例 3 : 练习-动态加载js</h3>
+    <input type="button" value="loading js file" onclick="addjs()">
+    <script>
+        function addjs(){
+            var s=document.createElement('script');
+            document.getElementById('t3').appendChild(s);
+            var src = document.createAttribute("src");
+            src.nodeValue = 'test.js';
+            s.setAttributeNode(src);
+        }
+    </script>
+
+</div>
+<hr/>
+<br/>
 </body>
 </html>
