--- a/4_HTML DOM/2_html_dom_获取节点.html
+++ b/4_HTML DOM/2_html_dom_获取节点.html
@@ -5,6 +5,201 @@
     <title>Title</title>
 </head>
 <body>
+<h3>获取元素节点</h3>
+<h4 style="white-space: pre-wrap; border: black 1px solid;width: 500px;">
+    document.getElementById 通过id获取元素节点
+    <hr/>
+    getElementsByTagName 通过标签名称获取元素节点
+    <hr/>
+    getElementsByClassName 通过类名获取元素节点
+    <hr/>
+    getElementsByName 通过表单元素的name获取元素节点
+    <hr/>
+    null 为什么会获取不到?
+    <hr/>
+    attributes 获取属性节点
+    <hr/>
+    childNodes 获取内容节点
+</h4>
 
+
+<br/>
+<hr/>
+<div style="background-color: lightgray;  border: 1px black solid;">
+    <h3>示例 1 : 通过id获取元素节点</h3>
+    在设计html的时候，一个元素对应的id应该是唯一的<br/>
+    可以通过document.getElementById 获取某个元素对应的元素节点对象<br/>
+
+    <hr/>
+    <br/>
+
+    <div id="d1">hello html dom</div>
+
+    <script>
+        var d1 = document.getElementById("d1");
+        document.write(d1);
+    </script>
+</div>
+<hr/>
+<br/>
+
+
+<br/>
+<hr/>
+<div style="background-color: lightgray;  border: 1px black solid;">
+    <h3>示例 2 : 通过标签名称获取元素节点</h3>
+    所有的元素都有标签名<br/>
+    通过 getElementsByTagName 根据标签名称获取一个元素数组。<br/>
+
+    <hr/>
+    <br/>
+    <div>hello javascript</div>
+    <div>hello BOM</div>
+    <div>hello DOM</div>
+    <br>
+
+    <script>
+        var divs = document.getElementsByTagName("div");
+        document.write(divs.length);
+        document.write("<br>");
+        for (let i = 0; i < divs.length; i++) {
+            document.write(divs[i]);
+            document.write("<br>");
+        }
+    </script>
+</div>
+<hr/>
+<br/>
+
+
+<br/>
+<hr/>
+<div style="background-color: lightgray;  border: 1px black solid;">
+    <h3>示例 3 : 通过类名获取元素节点</h3>
+    与 getElementsByTagName 类似的，也可以通过 getElementsByClassName 根据class返回一个节点数组<br/>
+    <hr/>
+    <br/>
+    <h1 class="d">hello javascript</h1>
+    <h2 class="d">hello BOM</h2>
+    <div class="d">hello DOM</div>
+    <br>
+    <script>
+        var elements = document.getElementsByClassName("d");
+        for (let i = 0; i < elements.length; i++) {
+            document.write(elements[i]);
+            document.write("<br>");
+        }
+    </script>
+</div>
+<hr/>
+<br/>
+
+
+
+
+<br/>
+<hr/>
+<div style="background-color: lightgray;  border: 1px black solid;">
+    <h3>示例 4 : 通过表单元素的name获取元素节点</h3>
+    表单元素都有name属性，通过getElementsByName可以根据name属性的值，获取元素节点。<br/>
+    <hr/>
+    <br/>
+    用户名 <input name="username"><br/>
+    密码 <input name="password">
+    <br>
+    <script>
+        var elements = document.getElementsByName('username');
+        var password =document.getElementsByName('password');
+
+        for (let i = 0; i < elements.length; i++) {
+            document.write(elements[i]);
+            document.write("<br>");
+        }
+        document.write(password);
+    </script>
+</div>
+<hr/>
+<br/>
+
+
+
+<br/>
+<hr/>
+<div style="background-color: lightgray;  border: 1px black solid;">
+    <h3>示例 5 : 为什么会获取不到?</h3>
+    参考本例代码，和通过id获取元素节点同样的代码 document.getElementById却无法获取元素节点。<br/>
+    这是因为javascript是解释语言，是顺序执行的。 在执行到 document.getElementById的时候，div标签还没有加载，所以无法获取。
+    <hr/>
+    <br/>
+
+
+    <script>
+        let v = document.getElementById("abc");
+        document.write(v);
+    </script>
+
+    <div id="abc">hello world</div>
+</div>
+<hr/>
+<br/>
+
+
+
+<br/>
+<hr/>
+<div style="background-color: lightgray;  border: 1px black solid;">
+    <h3>示例 6: 获取属性节点?</h3>
+    首先通过getElementById获取元素节点，然后通过元素节点的attributes获取其下所有的属性节点。<br/>
+    因为属性节点是多个，所以是以数组的形式返回出来的，接着通过for循环遍历，查看每个节点的nodeName和nodeValue<br/>
+    如果要获取一个指定属性的值，可以采用如下风格，as表示所有的属性，as["id"]取出名称是id的属性: <br/>
+    as["id"].nodeValue
+    <hr/>
+    <br/>
+   <div id="d2" align="center" class="abc">hello html dom</div>
+    <script>
+        var div2 = document.getElementById('d2');
+        var as =div2.attributes;
+
+        document.write("div 共有 "+ as.length + "  个属性");
+        document.write("分别是： ");
+        for (i=0; i<as.length;i++){
+            document.write("<br>");
+            document.write(as[i].nodeName);
+            document.write(":");
+            document.write(as[i].nodeValue);
+        }
+        document.write("<br>");
+        document.write("div 的id属性值是； "+as['id'].nodeValue);
+    </script>
+</div>
+<hr/>
+<br/>
+
+
+<br/>
+<hr/>
+<div style="background-color: lightgray;  border: 1px black solid;">
+    <h3>示例 7: 获取内容节点?</h3>
+    首先通过document.getElementById获取元素节点，然后通过childNodes获取其所有的子节点。 其中第一个子节点，就是其内容节点。<br/>
+    然后借助nodeName和nodeValue把内容节点的名称和值打印出来。<br/>
+    注: nodeName和nodeValue表示一个节点的名称和值<br/>
+    <hr/>
+    <br/>
+    <div id="d3" align="center" class="abc">
+        asjkhdkjhasjkdhas
+
+    </div>
+    <script>
+        var div3 = document.getElementById('d3');
+        var content = div3.childNodes[0];
+        document.write("div 的内容节点名是： "+content.nodeName);
+        document.write("<br>");
+        document.write("div 的内容节点值是： "+content.nodeValue);
+
+
+    </script>
+</div>
+<hr/>
+<br/>
 </body>
 </html>
