--- a/4_HTML DOM/9_html_dom_替换节点.html
+++ b/4_HTML DOM/9_html_dom_替换节点.html
@@ -5,6 +5,52 @@
     <title>Title</title>
 </head>
 <body>
+<h3>html 替换节点</h3>
+<h4 style="white-space: pre-wrap; border: black 1px solid;width: 500px;">
+    replaceChild       替换节点
+
+</h4>
+
+
+<br/>
+<hr/>
+<div style="background-color: lightgray;  border: 1px black solid;">
+    <h3>示例 1 : 替换节点</h3>
+    与删除节点一样，替换节点也需要先获取父节点，然后通过父节点替换子节点。<br/>
+    <h5 style="white-space: pre-wrap;">如本例：:
+        1. 获取父节点
+        2. 创建子节点
+        3. 获取被替换子节点
+        4. 通过replaceChild进行替换
+    </h5>
+    注: replaceChild 第一个参数是保留的节点，第二个参数是被替换的节点
+    <hr/>
+    <br/>
+    <div id="parentDiv">
+        <div id="d1">第一个div</div>
+        <div id="d2">第二个div</div>
+        <div id="d3">第三个div</div>
+    </div>
+    <button onclick="replaceDiv()">替换第3个div</button>
+
+
+    <script>
+        function replaceDiv(){
+            var d4 = document.createElement('div');
+            var text = document.createTextNode('fouth div being added');
+
+            d4.appendChild(text);
+
+            var d3 =document.getElementById('d3');
+            var parediv = document.getElementById('parentDiv');
+
+            parediv.replaceChild(d4, d3);
+        }
+    </script>
+</div>
+<hr/>
+<br/>
+
 
 </body>
 </html>
