--- a/4_HTML DOM/1_html_dom_节点概念.html
+++ b/4_HTML DOM/1_html_dom_节点概念.html
@@ -5,42 +5,50 @@
     <title>html dom</title>
 </head>
 <body>
-<h1>HTML DOM</h1>
+<h1 style="white-space: pre-wrap;background-color: lightgray;  border: 1px black solid;">
+    DOM 是 Document Ojecr Model （文档对象模型） 的缩写
+    dom 是把 html 里面的各类数据 当作 对象 进行操作的一种思路
+
+    比如：一个超链， 作为一个dom对象， 就可以使其隐藏， 修改其href指向的地址
+</h1>
+
+
+
+
+<br/>
 <hr/>
-<h4>DOM 是 document object model （文档对象模型）的 缩写，</h4>
-
-<h4>DOM 是 把 html 里面的各种数据 当作一个对象进行操作的一种思路</h4>
-
-<h4>比如，一个超链接，作为一个dom 对象， 就可以使其隐藏，修改其href 指向的地址</h4>
-
-<div>
+<div style="background-color: lightgray;  border: 1px black solid;">
+    <h3>示例 1 : 节点的概念</h3>
+    dom 把所有的html 都转换为节点<br/>
+    整个文档 是一个节点<br/>
+    元素 是节点 <br/>
+    元素属性 是节点<br/>
+    元素内容 是节点<br/>
+    注释 也是节点<br/><br/>
+   <div style="white-space: pre-wrap;"> 如本例： <br/>
+       通过 document.getElementById 获取id=d1的div 标签 对应的元素节点<br/>
+       然后通过 attributes 获取该节点对应的 属性节点<br/>
+       接着通过 childNodes 获取内容节点<br/></div>
     <hr/>
+    <br/>
+    <img src="imgs/1111.png">
+    <div id="d1">hello html dom</div>
 
-    <h3 style="color: darkred">示例1： 节点的概念</h3>
-    <h5 style="white-space: pre-wrap">
-        DOM 把所有的html 都转换为节点
-            整个文档 是一个 节点
-            元素 是节点
-            元素的属性 是节点
-            元素内容 是节点
-            注释 也是节点
-    </h5>
+    <script>
+        function p(s){
+            document.write(s);
+            document.write("<br>");
+        }
+        var div1 = document.getElementById('d1');
+        p("文档节点"+ document);
+        p("元素"+div1);
+        p("属性节点"+div1.attributes[0]);
+        p("内容节点"+div1.childNodes[0]);
+    </script>
 </div>
-
-<div id="d1">hello HTML DOM</div>
+<hr/>
+<br/>
 
 </body>
 
-<script>
-    function p(s){
-        document.write(s);
-        document.write("<br>")
-    }
-    var div1 = document.getElementById("d1");
-    p("文档节点"+document);
-    p("元素"+div1);
-    p("属性节点"+div1.attributes[0]);
-    p("内容节点"+div1.childNodes[0]);
-
-</script>
 </html>
